need to redo how the divs are moved in and out of the view area.  rapid clicking of categroies will crash because everything is rebuilt from scratch, not copy pasted.  solve re packing elements in view area

--- a/server/static/css/waiter.css
+++ b/server/static/css/waiter.css
@@ -27,7 +27,7 @@ padding-right: 0px;
 	text-align: center;
 	line-height: 50px;}
 
-
+.subbutton[name="mods"]{width: 100%;}
 .orderArea{
 	position: relative;
 }
